--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "integrador-menichetti-franco",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js", 
   "scripts": {
     "start": "nodemon app.js"
   },
