--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "integrador-menichetti-franco",
   "version": "1.0.0",
+  "type": "module",
   "main": "app.js", 
   "scripts": {
     "start": "nodemon app.js"
